#810 Localized Java 8 support